# polars-udf-plugin-tutorial

./: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
hellopolars/: __init__.py
src/: expressions.rs  lib.rs
tests/: test_pig_latinnify.py
